# MapAI-Competition

MapAI-Competition/team_DeepJoker/: pyproject.toml
MapAI-Competition/team_DeepJoker/src/: README.md  big_pre.py  main.py  train.py
MapAI-Competition/team_DeepJoker/src/util/: dataset.py  network.py  save_checkpoint.py
team_DeepJoker/src/: README.md  big_pre.py  main.py  train.py
team_DeepJoker/src/util/: big_crop.py  metrics.py  network.py
